--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "CollegeStratData"
 uuid = "7279015e-32d5-4a9c-a3a2-56f8f226bc2c"
 authors = ["hendri54 <hendricksl@protonmail.com>"]
-version = "0.1.0"
+version = "0.1.1"
 
 [deps]
 ArgCheck = "dce04be8-c92d-5529-be00-80e4d2c0e197"
@@ -9,6 +9,7 @@ CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 CommonLH = "96c8dc4a-d23f-53b2-b478-aad5d5ab80bd"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
+Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 EconometricsLH = "72fbd86f-1f1b-5c28-94df-d0426893c88f"
 FilesLH = "69233b93-b644-4f5d-9b2e-8880c8b19068"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
