--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "CollegeStratData"
 uuid = "7279015e-32d5-4a9c-a3a2-56f8f226bc2c"
 authors = ["hendri54 <hendricksl@protonmail.com>"]
-version = "0.2.12"
+version = "1.0"
 
 [deps]
 ArgCheck = "dce04be8-c92d-5529-be00-80e4d2c0e197"
@@ -16,6 +16,9 @@ FilesLH = "69233b93-b644-4f5d-9b2e-8880c8b19068"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 
 [compat]
+CSV = "0.7.7, 0.8"
+DataFrames = "0.21.7, 0.22"
+FilesLH = "0.2, 0.3"
 julia = "^1.5"
 
 [extras]
