--- a/Project.toml
+++ b/Project.toml
@@ -1,11 +1,12 @@
 name = "CollegeStratData"
 uuid = "7279015e-32d5-4a9c-a3a2-56f8f226bc2c"
 authors = ["hendri54 <hendricksl@protonmail.com>"]
-version = "1.4.2"
+version = "1.5.1"
 
 [deps]
 ArgCheck = "dce04be8-c92d-5529-be00-80e4d2c0e197"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+CollegeStratBase = "bfa38a7c-6709-4380-90e8-18b172effef4"
 CommonLH = "96c8dc4a-d23f-53b2-b478-aad5d5ab80bd"
 DataCollegeStrat = "bddd1445-09e8-4f50-b5c6-f025e4379dde"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
@@ -16,8 +17,8 @@ FilesLH = "69233b93-b644-4f5d-9b2e-8880c8b19068"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 
 [compat]
-DataCollegeStrat = "1.1"
 CSV = "^0.8"
+DataCollegeStrat = "1.1"
 DataFrames = "^0.22"
 julia = "^1.5"
 
