--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "CollegeStratData"
 uuid = "7279015e-32d5-4a9c-a3a2-56f8f226bc2c"
 authors = ["hendri54 <hendricksl@protonmail.com>"]
-version = "2.1"
+version = "2.1.0"
 
 [deps]
 ArgCheck = "dce04be8-c92d-5529-be00-80e4d2c0e197"
@@ -18,10 +18,10 @@ Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 
 [compat]
 ArgCheck = "2"
-CSV = "^0.8"
+CSV = "0.8, 0.9, 0.10"
 DataCollegeStrat = "1.3.1"
 DataFrames = "^1"
-DocStringExtensions = "0.8"
+DocStringExtensions = "0.8, 0.9"
 Parameters = "0.12"
 julia = "^1.5"
 
