--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "CollegeStratData"
 uuid = "7279015e-32d5-4a9c-a3a2-56f8f226bc2c"
 authors = ["hendri54 <hendricksl@protonmail.com>"]
-version = "2.10"
+version = "3"
 
 [deps]
 ArgCheck = "dce04be8-c92d-5529-be00-80e4d2c0e197"
@@ -18,6 +18,7 @@ Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 
 [compat]
 ArgCheck = "2"
+BaseMM = "2.0.0"
 CSV = "0.8, 0.9, 0.10"
 DataCollegeStrat = "2.3"
 DataFrames = "^1"
